# huygo111_SUGAR

./: .gitignore  DATA_FORMAT.md  LICENSE  README.md  REPO_ARCHITECTURE.md  TRAINING_PIPELINE.md  inference.sh  train.sh
scripts/: list_envs.py
scripts/sugar_il/: train.py
scripts/sugar_rl/: play.py  process_refiner_rollout.py  process_tracker_rollout.py  train.py
source/sugar_il/: pyproject.toml  setup.py
source/sugar_il/sugar_il/common/: sampler.py  streaming_replay_buffer.py
source/sugar_il/sugar_il/config/: train_generator_workspace.yaml
source/sugar_il/sugar_il/config/task/: CarryBox.yaml  KickBox.yaml  PickBottle.yaml  PushBox.yaml  SitChair.yaml  StandBottle.yaml
source/sugar_il/sugar_il/dataset/: base_dataset.py  generator_dataset.py
source/sugar_il/sugar_il/env_runner/: generator_runner.py
source/sugar_il/sugar_il/model/common/: normalizer.py
source/sugar_il/sugar_il/model/diffusion/: transformer_for_action_diffusion.py
source/sugar_il/sugar_il/model/encoder/: generator_state_encoder.py
source/sugar_il/sugar_il/policy/: generator.py
source/sugar_il/sugar_il/workspace/: train_generator_workspace.py
source/sugar_il/sugar_il/wrapper/: sugar_il_wrapper.py
source/sugar_rl/: pyproject.toml  setup.py
source/sugar_rl/sugar_rl/assets/objects/: objects.py
source/sugar_rl/sugar_rl/assets/robots/: unitree.py
source/sugar_rl/sugar_rl/tasks/locomanip/agents/: rsl_rl_bcppo_cfg.py  rsl_rl_ppo_cfg.py
source/sugar_rl/sugar_rl/tasks/locomanip/mdp/: __init__.py  commands.py  events.py  rewards.py  (+2 more)
source/sugar_rl/sugar_rl/utils/: rsl_rl_bcppo.py
(+22 files in other folders)
