[project]
name = "sugar_il"
version = "0.1.0"
dependencies = [
        "xformers==0.0.29.post1",
        "accelerate==1.2.1",
        "diffusers==0.32.1",
        "timm==1.0.12",
        "numpy==1.26.0",
        "scipy",
        "einops",
        "matplotlib",
        "numba",
        "numcodecs==0.12.1",
        "zarr==2.12.0",
        "tqdm",
        "datasets==2.6.1",
        "hydra-core",
        "json_repair",
        "scikit-image",
        "seaborn",
        "pydantic==2.11.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"